--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,6 @@ spring.datasource.password=Xacnhan1*
 spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
 spring.mvc.view.prefix=/views/
 spring.mvc.view.suffix=.jsp
-
+#spring.jpa.generate-ddl=true
+#spring.jpa.hibernate.ddl-auto = create
+#
